--- a/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Home/Index.cshtml
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Home/Index.cshtml
@@ -1,19 +1,59 @@
-﻿@model IEnumerable<SGRP.Aliexpress.Bussiness.Models.User>
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
+
 }
+@model SGRP.Aliexpress.Bussiness.Models.RedisCategoryUrlModel
+<div class="container">
+    <form method="post">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-2">Categories URL</div>
+            <div class="col-10"><input style="width: 100%" asp-for="Url" /></div>
+        </div>
+        <input type="button" value="Add" onclick="AddTextBox()" />
+        <div id="divCont">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-6">
+                <button asp-route="Custom">START</button>
+            </div>
+        </div>
+    </form>
 
-        </tr>
-    }
 </div>
+<div class="row">
+    <div class="col-12">
+        <hr />
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        Total Done: &nbsp;&nbsp;&nbsp;<label id="messagesList"></label>
+    </div>
+</div>
+
+@section Scripts{
+    <script>
+        function AddTextBox() {
+            var div = document.createElement('DIV');
+            div.innerHTML = GetDynamicTextbox("");
+            document.getElementById("divCont").appendChild(div);
+        }
+
+        function GetDynamicTextbox(value) {
+            return '<div id="frd" class="form-row">' +
+                '<div id = "fr" class="col-md-7 mb-3" >' +
+                '<input type="text" name="txttest" class="form-control" /></div >' +
+                '<div ="cd" class="col-md-3 mb-3" > <input type="button" onclick="RemoveTextBox(this)" value="Remove" class="btn btn-primary" /></div ></div > ';
+        }
+
+        function RemoveTextBox(div) {
+            document.getElementById("divCont").removeChild(div.parentNode.parentNode.parentNode);
+        }
+    </script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/site.js"></script>
+}
