--- a/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Home/Index.cshtml
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
         function GetDynamicTextbox(value) {
             return '<div id="frd" class="form-row">' +
                 '<div id = "fr" class="col-md-7 mb-3" >' +
-                '<input type="text" name="Url" id="Url" class="form-control" /></div >' +
+                '<input type="text" name="Urls" id="Urls" class="form-control" /></div >' +
                 '<div ="cd" class="col-md-3 mb-3" > <input type="button" onclick="RemoveTextBox(this)" value="Remove" class="btn btn-primary" /></div ></div > ';
         }
 
