--- a/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Dashboard/Index.cshtml
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Web/Views/Dashboard/Index.cshtml
@@ -36,7 +36,7 @@
         var data = {
                 labels: @Html.Raw(XLabels),
                 datasets: [{
-                    label: "Countries Chart",
+                    label: "Product ID",
                     backgroundColor: [
                         'rgba(255, 99, 132, 0.2)',
                         'rgba(54, 162, 235, 0.2)',
@@ -69,7 +69,7 @@
                     data: @Html.Raw(YValues),
                     fill: false
     }, {
-                    label: "aaa Chart",
+                    label: "Category",
                     backgroundColor: [
                         'rgba(54, 162, 235, 0.2)',
                         'rgba(54, 162, 235, 0.2)',
